Corrected typos in HTML files

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
           <h3>Education</h3>
           <ul>
             <li>BSc Software Engineering (2nd Year)-Zimbabwe Open University</li>
-            <li>National Certificate in Information Technology-Mutare Polytechnic College</li>
+            <li>National Diploma in Information Technology-Mutare Polytechnic College</li>
           </ul>
         </div>
 
