--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <section>
       <h2>Welcome</h2>
-      <p>Welcome to my portfolio website. Use the buttons below to learn more about me and explore my work.</p>
+      <p>Welcome to my portfolio website. Learn more about me and explore my work.</p>
     </section>
 
     <header>
