Edited project descriptions

--- a/projects.html
+++ b/projects.html
@@ -25,13 +25,15 @@
         <!-- Project 2 -->
         <div class="info-box">
           <h3>Ivhumunhu Digital Smart Farming</h3>
-          <p>A clean, responsive personal portfolio site (this one!) designed with HTML, CSS, and a minimalist black & white theme to showcase my skills and projects.</p>
+          <p>A smart farming platform combining IoT sensors, AI analytics, and interactive visualization to help farmers optimize yields and resources. Powered by an ESP32 IoT network, Django REST backend, and React.js/Three.js frontend.</p>
         </div>
 
         <!-- Project 3 -->
         <div class="info-box">
           <h3>Portfilio Website</h3>
-          <p>Microcontroller-based project using C++ and Arduino to build a smart door lock system controlled via a mobile app. Includes sensors and password-based access.</p>
+          <p>This is my personal portfolio website, showcasing my journey as a second-year Software Engineering student. The site highlights my educational background, programming skills, personal details, and current and completed projects.</p>
+        
+
         </div>
       </div>
     </section>
