Added visual effects

--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
 </head>
 <body>
   <div class="container">
-
-
-    <section>
+<section>
       <h2>Welcome</h2>
-      <p>Welcome to my portfolio website. Learn more about me and explore my work.</p>
+      <p>Learn more about me and explore my work.</p>
     </section>
+   
 
     <header>
       <h1>Liberty Musasa</h1>
@@ -27,5 +26,6 @@
 
     <footer>&copy; 2025 Liberty Musasa. All rights reserved.</footer>
   </div>
+ 
 </body>
 </html>
